<?xml version="1.0"?>
<package format="2">
  <name>rvo4uw</name>
  <version>0.0.0</version>
  <description>RVO4UW library package</description>
  <maintainer email="user@example.com">RVO4UW Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
